--- a/BankTransactions/appsettings.json
+++ b/BankTransactions/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=localhost\\SQLEXPRESS;Database=TransactionDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
-
+    "DevConnection": "Server=(local)\\SQLEXPRESS;Database=TransactionDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   }
 }
